# jni_demo

./: .classpath
native/: CMakeLists.txt  my_DoSomething.h  native-lib.cpp  步骤.txt
src/my/: Demo.java  DoSomething.java
